--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create",
+  "name": "react-mobx-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.8",
     "axios": "^0.19.2",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.4",
     "nprogress": "^0.2.0",
@@ -42,9 +43,10 @@
     "@loadable/component": "^5.12.0",
     "antd-dayjs-webpack-plugin": "^0.0.8",
     "babel-plugin-import": "^1.13.0",
-    "customize-cra": "^0.9.1",
+    "customize-cra": "^1.0.0-alpha.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "postcss-less": "^3.1.4",
     "react-app-rewired": "^2.1.5",
     "svg-sprite-loader": "^4.2.1",
     "svgo-loader": "^2.2.1"
